--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wiktionary-json",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/parseContent.js",
+  "types": "./dist/parseContent.d.ts",
   "dependencies": {
     "cheerio": "^1.0.0-rc.6"
   },
@@ -17,7 +18,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -r ./dist/* && tsc",
     "start": "tsc && node index.js --enable-source-maps",
     "test": "tsc && jest"
   },
